# kalman-cpp

./: .clang-format  .gitmodules  CMakeLists.txt  CONTRIBUTING.md  LICENSE  PULL_REQUEST_TEMPLATE.md  README.md
cmake/: CompilerWarnings.cmake  Conan.cmake  SourcesAndHeaders.cmake  StandardSettings.cmake  Utils.cmake
examples/: CMakeLists.txt  README.md  example_ekf_numerical.cpp
examples/common/: CMakeLists.txt  example_plotting.cpp  straight_line_measurements.cpp  straight_line_measurements.h
examples/src/: auto_diff_test.cpp  example.cpp  example_ekf_1.cpp  example_ekf_2.cpp  example_ekf_advanced.cpp  example_ekf_analytical.cpp  example_ekf_numerical.cpp  example_kf_1.cpp  example_kf_vs_ekf.cpp  example_numerical_ekf.cpp
examples/src/common/: CMakeLists.txt  ball_simulator.cpp  ball_simulator.h  example_plotting.h  examples_common.h  straight_line_measurements.cpp  straight_line_measurements.h
src/: extended_kalman_filter.cpp  extended_kalman_filter.h  filter_utils.h  kalman_filter.cpp  kalman_filter.h  temp.cpp  temp.h
src/components/: base_predictor.h  base_updater.h
src/internal/: type_traits.h
src/numerical/: jacobian.h
src/predict/: base_predictor.h  predictor_type_traits.h
src/prediction/: base_predictor.h  predictor_type_traits.h
src/update/: base_updater.h
test/: CMakeLists.txt
test/src/: example_test.cpp  kalman_filter_test.cpp  test_ekf_prediction.cpp  test_ekf_setup.cpp  test_ekf_update.cpp  test_numerical_jacobian.cpp
